--- a/DataPrep/Rzepa/dataset_prep.ipynb
+++ b/DataPrep/Rzepa/dataset_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all = pd.read_csv('rzepa_all.csv', index_col='id')\n",
+    "df_all = pd.read_csv('rzepa_all.csv')\n",
     "proper_cols = np.array(['title', 'magazine_nr', 'text', 'link', 'source', 'author','department', 'imgage', 'image_text', 'date','class'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Department data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tagging = pd.read_csv(\"tagged/tagging.csv\")\n",
+    "tagging_rzepa = tagging[tagging['source'] == 'rzepa']\n",
+    "df_tagged = df_all[df_all['department'].isin(tagging_rzepa['department'])].copy()\n",
+    "df_tagged['class'] = 1\n",
+    "df_tagged['translated'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tagging_newsweek = tagging[tagging['source'] == 'newsweek']\n",
+    "df_newsweek = pd.read_csv('../Newsweek/newsweek.csv')\n",
+    "df_tagged_newsweek = df_newsweek[df_newsweek['Wydanie'].isin(tagging_newsweek['department'])].copy()\n",
+    "df_tagged_newsweek['class'] = 1\n",
+    "df_tagged_newsweek['translated'] = 0"
    ]
   },
   {
@@ -31,14 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cop_rzepa = pd.read_csv('cop_rzepa.csv', index_col='id')\n",
+    "cop_rzepa = pd.read_csv('cop_rzepa.csv')\n",
     "cop_rzepa = cop_rzepa[['title', 'date', 'text']].merge(df_all.reset_index(), on=['title', 'date'], how='left')\n",
     "cop_rzepa = cop_rzepa.dropna(subset=['text_x']).rename(columns={'text_x': 'text'})\n",
-    "cop_rzepa['class'] = 1"
+    "cop_rzepa = cop_rzepa.drop(columns=['text_y'])\n",
+    "cop_rzepa['class'] = 1\n",
+    "cop_rzepa['translated'] = 0"
    ]
   },
   {
@@ -50,34 +85,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"tagged/dataset.csv\", index_col='id')"
+    "df = pd.read_csv(\"tagged/dataset.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2663\n",
-      "2621\n"
+      "2860\n",
+      "2812\n"
      ]
     }
    ],
    "source": [
-    "cop_rzepa['translated'] = False\n",
-    "df_new = pd.concat([df, cop_rzepa])\n",
+    "df_new = pd.concat([df, cop_rzepa, df_tagged])\n",
     "print(len(df_new))\n",
-    "df_new = df_new.drop_duplicates(subset=['title', 'translated', 'date'])\n",
+    "df_new = df_new.drop_duplicates(subset=['title', 'translated','date'])\n",
+    "df_new = df_new[['title', 'text', 'translated','class','source']]\n",
     "print(len(df_new))\n",
-    "df_new.to_csv('tagged/dataset_02-2024.csv')"
+    "df_new = pd.concat([df_new, df_tagged_newsweek[['title', 'translated','class', 'text', 'source']]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new.to_csv('tagged/dataset_02-2024.csv', index=False)"
    ]
   }
  ],
