--- a/Classification/files/ngram/ngrams.ipynb
+++ b/Classification/files/ngram/ngrams.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../cop_rzepa.csv\")\n",
-    "save_rest_ngrams(df)"
+    "df = pd.read_csv(\"dataset_02-2024.csv\")\n",
+    "save_rest_ngrams(df[df['class']==1])"
    ]
   }
  ],
