--- a/Scrap/wyborcza.ipynb
+++ b/Scrap/wyborcza.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wyborcza import get_article_data\n",
+    "from Extract.Wyborcza.wyborcza import get_article_data\n",
     "import pandas as pd\n",
     "from selenium import webdriver\n",
     "from tqdm import tqdm\n",
