--- a/DataPrep/Wyborcza/wyborcza.ipynb
+++ b/DataPrep/Wyborcza/wyborcza.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,46 +12,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([pd.read_csv(f) for f in os.listdir() if f.endswith('.csv')], ignore_index = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Wyborcza 23.07-02.08.2018.xlsx', 'Wyborcza 17.11.2017-21.07.2018.xlsx', 'Wyborcza 18.05.2017-17.11.2017.xlsx', 'GW 01.01.2015-17.05.2017.xlsx', 'Wyborcza 03.08.2018-19.11.2018.xlsx']\n"
+      "223424\n",
+      "213340\n"
      ]
     }
    ],
    "source": [
-    "for dir, _, files in os.walk(\"data\"):\n",
-    "    print(files)\n",
-    "    df = pd.concat([pd.read_excel(os.path.join(dir, f)) for f in files])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df[~df['text'].isna()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from math import ceil\n",
-    "\n",
-    "def chunkit(df, chunk_size= 10000):\n",
-    "    num_chunks = ceil(len(df) / chunk_size)\n",
-    "    for i in range(num_chunks):\n",
-    "        yield df[i*chunk_size:(i + 1) * chunk_size]\n",
-    "\n",
-    "for i, chunk in enumerate(chunkit(df)): chunk.to_csv(f\"data/wyborcza_{i}.csv\", index=False)"
+    "df = df[~df['Date'].isna()]\n",
+    "print(len(df))\n",
+    "df = df.drop_duplicates(subset = ['Date', 'Title'], keep = 'first')\n",
+    "print(len(df))"
    ]
   }
  ],
@@ -71,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
