--- a/Classification/Classification.ipynb
+++ b/Classification/Classification.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -412,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -438,7 +438,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "eco_gpc.csv\n",
+            "eco_gpc.csv\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "eco_wyborcza.csv\n",
             "eco_rzepa.csv\n",
             "eco_polityka.csv\n",
@@ -453,115 +459,30 @@
         "data = []\n",
         "for corp in corps:\n",
         "    print(corp)\n",
-        "    data.append(pd.read_csv(corp, usecols=['text']))\n",
+        "    data.append(pd.read_csv(corp, usecols=['clean_text']))\n",
         "\n",
         "df = pd.concat(data)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 14,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>text</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>ZRÓWNOWAŻONY ROZWÓJ \\ Jak pokazują badania, aż...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>ENERGETYKA \\ Trzy magazyny energii elektryczne...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>Transformacja energetyczna to zarówno potężne ...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>Ministrowie ds. energii Unii Europejskiej usta...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>Są? dwie dobre wiadomości dla odbiorców gazu i...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>393</th>\n",
-              "      <td>Zielony (nie)ładKomisja Europejska uważa, że p...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>394</th>\n",
-              "      <td>Jesteśmy krajem bezpiecznym pod względem żywno...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>395</th>\n",
-              "      <td>1 czerwca imigranci z Bliskiego Wschodu, Afryk...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>396</th>\n",
-              "      <td>Amerykański renomowany bank Goldman Sachs poda...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>397</th>\n",
-              "      <td>W czasie pandemii rzuciłem się na seriale w ne...</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>12982 rows × 1 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                                                  text\n",
-              "0    ZRÓWNOWAŻONY ROZWÓJ \\ Jak pokazują badania, aż...\n",
-              "1    ENERGETYKA \\ Trzy magazyny energii elektryczne...\n",
-              "2    Transformacja energetyczna to zarówno potężne ...\n",
-              "3    Ministrowie ds. energii Unii Europejskiej usta...\n",
-              "4    Są? dwie dobre wiadomości dla odbiorców gazu i...\n",
-              "..                                                 ...\n",
-              "393  Zielony (nie)ładKomisja Europejska uważa, że p...\n",
-              "394  Jesteśmy krajem bezpiecznym pod względem żywno...\n",
-              "395  1 czerwca imigranci z Bliskiego Wschodu, Afryk...\n",
-              "396  Amerykański renomowany bank Goldman Sachs poda...\n",
-              "397  W czasie pandemii rzuciłem się na seriale w ne...\n",
-              "\n",
-              "[12982 rows x 1 columns]"
-            ]
-          },
-          "execution_count": 12,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "df"
+        "from files.ngram.ngrams import ngram_counter\n",
+        "df = df[~df['clean_text'].isna()]\n",
+        "for ngram in range(1, 4):\n",
+        "    df_ngram = ngram_counter(ngram, df).iloc[:100]\n",
+        "    df_ngram.to_csv(f\"most_common_{ngram}-gram.csv\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
